<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="16dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:scaleType="centerCrop"
                android:src="@drawable/banda"/>

        <TextView
                android:id="@+id/resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo"
                android:textSize="35sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:paddingTop="10dp"
                    android:text="@string/participante"
                    android:textSize="18sp"/>


            <EditText
                    android:id="@+id/participanteEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edParticipante"
                    android:inputType="text"/>
        </LinearLayout>

        <TextView
                style="@style/TextPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloPrimeiraPergunta"
                android:layout_marginTop="5dp"/>

        <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/primeiraPergunta"/>


        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

            <RadioButton
                    android:id="@+id/opcaoRadio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/primeiraResposta"/>

            <RadioButton
                    android:id="@+id/opcaoRadio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/segundaResposta"/>
        </RadioGroup>

        <TextView
                style="@style/TextPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulosegundaPergunta"
                android:layout_marginTop="5dp"/>

        <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/segundaPergunta"/>

        <EditText
                android:id="@+id/respostaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edsegundaResposta"
                android:inputType="text"/>

        <TextView
                style="@style/TextPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloTerceiraPergunta"
                android:layout_marginTop="5dp"/>

        <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/terceiraPergunta"/>

        <CheckBox
                android:id="@+id/checkComplet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terceiraPerguntaCheck1"
                android:layout_marginTop="5dp"/>

        <CheckBox
                android:id="@+id/checkComplet1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terceiraPerguntaCheck2"/>

        <CheckBox
                android:id="@+id/checkComplet3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terceiraPerguntaCheck3"/>

        <TextView
                style="@style/TextPergunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloQuartaPergunta"/>

        <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/quartaPergunta"/>

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

            <RadioButton
                    android:id="@+id/opcaoRadioCantorPrimeira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/primeiraRespostaQuartaPergunta"/>

            <RadioButton
                    android:id="@+id/opcaoRadioCantorSegunda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/segundaRespostaQuartaPergunta"/>
        </RadioGroup>

        <Button
                android:id="@+id/btClassificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btClassificar"/>
    </LinearLayout>

</ScrollView>